// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HelpCenterEditModalHeader /> should display the component correctly - with the category selector: with the category selector 1`] = `
<div>
  <header
    class="header"
  >
    <div
      class="headerTopContainer"
    >
      <span
        class="titleInput"
      >
        Uncategorized article
      </span>
      <div
        class="headerControls"
      >
        <div
          class="ui-badge-badge-0cf8 ui-badge-uppercase-0cf8"
          data-name="badge"
          id="editingState"
          style="border-radius: 100px;"
        >
          <i
            class="material-icons"
          >
            edit
          </i>
          UNSAVED
        </div>
        <div
          class="wrapper"
        >
          <button
            class="trigger"
            data-testid="dropdown-select-trigger"
          >
            <span
              class="label"
            >
              <span>
                <img
                  alt="fr-FR"
                  class="flag-emoji"
                  src="test-file-stub"
                />
                <span>
                  French - France
                </span>
              </span>
            </span>
            <span
              class="material-icons"
            >
              arrow_drop_down
            </span>
          </button>
        </div>
        <button
          aria-disabled="false"
          aria-label="copy url"
          class="ui-button-wrapper-cef1 wrapper ghost medium ui-button-ghost-cef1 ui-button-secondary-cef1"
          id="copy-url-button"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            <i
              class="material-icons icon"
            >
              link
            </i>
          </span>
        </button>
        <button
          aria-disabled="false"
          aria-label="close edit modal"
          class="ui-button-wrapper-cef1 wrapper ghost medium ui-button-ghost-cef1 ui-button-secondary-cef1"
          id="close-edit-mode-button"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            <i
              class="material-icons icon"
            >
              keyboard_tab
            </i>
          </span>
        </button>
      </div>
    </div>
    <div
      class="break"
    />
    <div
      class="inlineSettings"
    >
      <div
        class="categorySelect"
      >
        <div>
          <div
            class="dropdown"
          >
            <div
              aria-expanded="false"
              aria-haspopup="true"
              class="select noCategory"
              data-toggle="dropdown"
            >
              <div
                class="select dropdown-toggle selectFullWidth"
              >
                <span
                  class="label"
                  style="min-width: 10px; opacity: 1;"
                >
                  - No Category -
                </span>
                <input
                  autocomplete="chrome-off"
                  class="input"
                  style="min-width: 10px;"
                  type="text"
                  value=""
                />
                <i
                  class="material-icons dropdownIcon"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
            <div
              aria-hidden="true"
              class="options categoryDropdown optionsFullWidth dropdown-menu"
              role="menu"
              tabindex="-1"
            >
              <button
                class="option dropdown-item"
                role="menuitem"
                tabindex="0"
                type="button"
              >
                <span>
                  - No category -
                </span>
              </button>
              <button
                class="option dropdown-item"
                role="menuitem"
                tabindex="0"
                type="button"
              >
                <span>
                  Orders
                </span>
              </button>
              <button
                class="option dropdown-item"
                role="menuitem"
                tabindex="0"
                type="button"
              >
                <span>
                  Pricing
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </header>
</div>
`;

exports[`<HelpCenterEditModalHeader /> should display the component correctly - without the category selector: without the category selector 1`] = `
<div>
  <header
    class="header"
  >
    <div
      class="headerTopContainer"
    >
      <span
        class="titleInput"
      >
        Uncategorized article
      </span>
      <div
        class="headerControls"
      >
        <div
          class="ui-badge-badge-0cf8 ui-badge-uppercase-0cf8"
          data-name="badge"
          id="editingState"
          style="border-radius: 100px;"
        >
          <i
            class="material-icons"
          >
            edit
          </i>
          UNSAVED
        </div>
        <div
          class="wrapper"
        >
          <button
            class="trigger"
            data-testid="dropdown-select-trigger"
          >
            <span
              class="label"
            >
              <span>
                <img
                  alt="fr-FR"
                  class="flag-emoji"
                  src="test-file-stub"
                />
                <span>
                  French - France
                </span>
              </span>
            </span>
            <span
              class="material-icons"
            >
              arrow_drop_down
            </span>
          </button>
        </div>
        <button
          aria-disabled="false"
          aria-label="copy url"
          class="ui-button-wrapper-cef1 wrapper ghost medium ui-button-ghost-cef1 ui-button-secondary-cef1"
          id="copy-url-button"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            <i
              class="material-icons icon"
            >
              link
            </i>
          </span>
        </button>
        <button
          aria-disabled="false"
          aria-label="close edit modal"
          class="ui-button-wrapper-cef1 wrapper ghost medium ui-button-ghost-cef1 ui-button-secondary-cef1"
          id="close-edit-mode-button"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            <i
              class="material-icons icon"
            >
              keyboard_tab
            </i>
          </span>
        </button>
      </div>
    </div>
    <div
      class="break"
    />
    <div
      class="inlineSettings"
    />
  </header>
</div>
`;

exports[`<HelpCenterEditModalHeader /> should render an input when onEditTitle is defined 1`] = `
<div>
  <header
    class="header"
  >
    <div
      class="headerTopContainer"
    >
      <div
        class="titleContainer"
      >
        <input
          class="titleInput"
          maxlength="250"
          placeholder="Title"
          title="Uncategorized article"
          type="text"
          value="Uncategorized article"
        />
      </div>
      <div
        class="headerControls"
      >
        <div
          class="ui-badge-badge-0cf8 ui-badge-uppercase-0cf8"
          data-name="badge"
          id="editingState"
          style="border-radius: 100px;"
        >
          <i
            class="material-icons"
          >
            edit
          </i>
          UNSAVED
        </div>
        <div
          class="wrapper"
        >
          <button
            class="trigger"
            data-testid="dropdown-select-trigger"
          >
            <span
              class="label"
            >
              <span>
                <img
                  alt="fr-FR"
                  class="flag-emoji"
                  src="test-file-stub"
                />
                <span>
                  French - France
                </span>
              </span>
            </span>
            <span
              class="material-icons"
            >
              arrow_drop_down
            </span>
          </button>
        </div>
        <button
          aria-disabled="false"
          aria-label="copy url"
          class="ui-button-wrapper-cef1 wrapper ghost medium ui-button-ghost-cef1 ui-button-secondary-cef1"
          id="copy-url-button"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            <i
              class="material-icons icon"
            >
              link
            </i>
          </span>
        </button>
        <button
          aria-disabled="false"
          aria-label="close edit modal"
          class="ui-button-wrapper-cef1 wrapper ghost medium ui-button-ghost-cef1 ui-button-secondary-cef1"
          id="close-edit-mode-button"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            <i
              class="material-icons icon"
            >
              keyboard_tab
            </i>
          </span>
        </button>
      </div>
    </div>
    <div
      class="break"
    />
    <div
      class="inlineSettings"
    />
  </header>
</div>
`;
